Exercise2_02/manifests/deployment_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: backend
          image: vuolahti/backend:03
