Exercise2_02/manifests/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: frontend
          image: vuolahti/frontend:03
          imagePullPolicy: Always
